clean up unbearable icks