@@ -1,12 +1,8 @@
 package com.mushipeas.springbootrecipes.services;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
-
 import com.mushipeas.springbootrecipes.dao.RecipeDao;
 import com.mushipeas.springbootrecipes.models.Recipe;
-
+import java.util.Set;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -17,9 +13,6 @@ import org.springframework.stereotype.Service;
 @Service
 public class RecipeService {
 
-    // @Autowired 
-    // private RecipeDao recipeDao;
-
     private final RecipeDao recipeDao;
 
     @Autowired
@@ -27,15 +20,12 @@ public class RecipeService {
         this.recipeDao = recipeDao;
     }
     
-    public Page<Recipe> getAllRecipesWhichContainKeywords(String keywords, Integer pageNo, Integer pageSize, String sortBy)
-    {
+    public Page<Recipe> getAllRecipesWhichContainKeywords(String keywords, Integer pageNo, Integer pageSize, String sortBy) {
         Pageable paging = PageRequest.of(pageNo, pageSize, Sort.by(sortBy));
 
-        Set<String> keywordSet = new HashSet<String>(Arrays.asList(keywords.split(" ")));
- 
-        Page<Recipe> pagedResult = recipeDao.fetchRecipesWhichContainInTitle(keywordSet, paging);
-        
-        return pagedResult;
+        Set<String> keywordSet = Set.of(keywords.split(" "));
+
+      return recipeDao.fetchRecipesWhichContainInTitle(keywordSet, paging);
     }
     
 }
